--- a/Visualizing_earnings_based_on_college_majors.ipynb
+++ b/Visualizing_earnings_based_on_college_majors.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "Visualizing Earnings Based on College Major\n",
+    "# Visualizing Earnings Based on College Major\n",
     "\n",
     "In this project we're going to use pandas plotting along with visualizations to explore the dataset of job outcomes of students who graduated from 2010 to 2012. Each row in the dataset represents a different college major and has information including median salaries, gender diversity, employment rates and so on along the columns.\n",
     "\n",
@@ -867,19 +867,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size='14'>**ScatterPlots**</font>"
+    "# **ScatterPlots**"
    ]
   },
   {
@@ -1196,7 +1187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"14\">**Histograms**</font>"
+    "# **Histograms**"
    ]
   },
   {
@@ -1212,9 +1203,6 @@
     "- Unemployment_rate\n",
     "- Men\n",
     "- Women\n",
-    "\n",
-    "After creating the histograms we want to answer the following questions:\n",
-    "1. \n",
     "\n",
     "We will also experiment each with different bin sizes."
    ]
